cabal-version: 2.4
name: word-array
version: 0.1.0.0
synopsis:

description: treat integral types as arrays of smaller integral types
homepage: https://github.com/goolord/word-array/

bug-reports: https://github.com/goolord/word-array/issues
license: MIT
license-file: LICENSE
author: Zachary Churchill
maintainer: zacharyachurchill@gmail.com

-- copyright:
category: Data
extra-source-files: CHANGELOG.md

library
  exposed-modules: 
      Data.Word64Array.Word8

  build-depends: 
    , base >=4.13 && <5.0
    , mono-traversable
    , deepseq
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: MyLibTest.hs
  build-depends: base ^>=4.14.1.0

benchmark bench
  type: exitcode-stdio-1.0
  build-depends:
      base
    , tasty
    , weigh == 0.0.16
    , tasty-bench
    , word-array
    , deepseq
  ghc-options: -Wall -O2
  default-language: Haskell2010
  hs-source-dirs: bench
  main-is: Main.hs

source-repository head
  type: git
  location: https://github.com/goolord/word-array/
